--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,8 @@ project/plugins/project/
 .lib/
 
 # Generated Metals (Scala Language Server) files
- # Reference: https://scalameta.org/metals/
+# Reference: https://scalameta.org/metals/
 .metals/
 .bloop/
 project/metals.sbt
+project/project/metals.sbt
