--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ project.P2-build.iml
 metastore_db/
 spark-warehouse/
 project/
+input/AgeSexPF.parquet/
+input/mainPF.parquet/
+input/uscrashes.parquet/
+input/vehicle.parquet/
 
 #MacOS
 .DS_Store
